[project]
name = "comfyui-gpt4v-image-captioner"
description = "Nodes:GPT4V-Image-Captioner"
version = "1.0.0"
license = "LICENSE"
dependencies = ["requests", "urllib3", "Pillow", "torch", "typing", "numpy", "openai==1.12.0", "tqdm", "cmake", "fairscale>=0.4.4", "gitpython", "imageio", "joblib", "matplotlib", "numba", "opencv-python-headless[ffmpeg]<=4.7.0.72", "pilgram", "rembg", "scikit-image==0.20.0", "scikit-learn", "scipy", "timm>=0.4.12", "transformers==4.26.1"]

[project.urls]
Repository = "https://github.com/438443467/ComfyUI-GPT4V-Image-Captioner"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-GPT4V-Image-Captioner"
Icon = ""
